Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -1,68 +1,431 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset='utf-8'>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="viewport" content="width=640" />
-
-    <link rel="stylesheet" href="stylesheets/core.css" media="screen"/>
-    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)"/>
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
-
-    <script type="text/javascript" src="javascripts/modernizr.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
-    <script type="text/javascript">
-      $(document).ready(function () {
-        $('#main_content').headsmart()
-      })
-    </script>
     <title>Hello github by smorcuend</title>
+
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
+
+    <!--[if lt IE 9]>
+    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
   </head>
-
   <body>
-    <a id="forkme_banner" href="https://github.com/smorcuend/Hello_github">View on GitHub</a>
-    <div class="shell">
-
-      <header>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <h1>Hello github</h1>
-            <h2></h2>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
+    <div class="wrapper">
+      <header class="without-description">
+        <h1>Hello github</h1>
+        <p></p>
+        <p class="view"><a href="https://github.com/smorcuend/Markdown_playground">View the Project on GitHub <small>smorcuend/Markdown_playground</small></a></p>
+        <ul>
+          <li><a href="https://github.com/smorcuend/Markdown_playground/zipball/master">Download <strong>ZIP File</strong></a></li>
+          <li><a href="https://github.com/smorcuend/Markdown_playground/tarball/master">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="https://github.com/smorcuend/Markdown_playground">View On <strong>GitHub</strong></a></li>
+        </ul>
       </header>
+      <section>
+        <h1>
+<a id="hello-world" class="anchor" href="#hello-world" aria-hidden="true"><span class="octicon octicon-link"></span></a>Hello World!</h1>
 
-      <section id="downloads">
-        <span class="inner">
-          <a href="https://github.com/smorcuend/Hello_github/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/smorcuend/Hello_github/tarball/master" class="tgz"><em>download</em> .TGZ</a>
-        </span>
+<p><code>Playing with "GitHub Flavored Markdown" (GFM) syntax</code></p>
+
+<h1>
+<a id="paragraphs-headers-blockquotes" class="anchor" href="#paragraphs-headers-blockquotes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Paragraphs, Headers, Blockquotes</h1>
+
+<h1>
+<a id="h1" class="anchor" href="#h1" aria-hidden="true"><span class="octicon octicon-link"></span></a>H1</h1>
+
+<h2>
+<a id="h2" class="anchor" href="#h2" aria-hidden="true"><span class="octicon octicon-link"></span></a>H2</h2>
+
+<h3>
+<a id="h3" class="anchor" href="#h3" aria-hidden="true"><span class="octicon octicon-link"></span></a>H3</h3>
+
+<h4>
+<a id="h4" class="anchor" href="#h4" aria-hidden="true"><span class="octicon octicon-link"></span></a>H4</h4>
+
+<h5>
+<a id="h5" class="anchor" href="#h5" aria-hidden="true"><span class="octicon octicon-link"></span></a>H5</h5>
+
+<h6>
+<a id="h6" class="anchor" href="#h6" aria-hidden="true"><span class="octicon octicon-link"></span></a>H6</h6>
+
+<h1>
+<a id="a-first-level-header" class="anchor" href="#a-first-level-header" aria-hidden="true"><span class="octicon octicon-link"></span></a>A First Level Header</h1>
+
+<h2>
+<a id="a-second-level-header" class="anchor" href="#a-second-level-header" aria-hidden="true"><span class="octicon octicon-link"></span></a>A Second Level Header</h2>
+
+<p>Paragraphs are separated by a blank line.</p>
+
+<p>2nd paragraph. <em>Italic</em>, <strong>bold</strong>, and <code>monospace</code>. Itemized lists
+look like:</p>
+
+<ul>
+<li>this one</li>
+<li>that one</li>
+<li>the other one</li>
+</ul>
+
+<p>Note that --- not considering the asterisk --- the actual text
+content starts at 4-columns in.</p>
+
+<h2>
+<a id="blockquotes" class="anchor" href="#blockquotes" aria-hidden="true"><span class="octicon octicon-link"></span></a>Blockquotes</h2>
+
+<blockquote>
+<p>This is a blockquote.</p>
+
+<p>This is the second paragraph in the blockquote.</p>
+
+<h2>
+<a id="this-is-an-h2-in-a-blockquote" class="anchor" href="#this-is-an-h2-in-a-blockquote" aria-hidden="true"><span class="octicon octicon-link"></span></a>This is an H2 in a blockquote</h2>
+</blockquote>
+
+<p>Use 3 dashes for an em-dash. Use 2 dashes for ranges (ex., "it's all
+in chapters 12--14"). Three dots ... will be converted to an ellipsis.
+Unicode is supported. ☺</p>
+
+<h2>
+<a id="phrase-emphasis" class="anchor" href="#phrase-emphasis" aria-hidden="true"><span class="octicon octicon-link"></span></a>Phrase Emphasis</h2>
+
+<p>Some of these words <em>are emphasized</em>.
+Some of these words <em>are emphasized also</em>.</p>
+
+<p>Use two asterisks for <strong>strong emphasis</strong>.
+Or, if you prefer, <strong>use two underscores instead</strong>.</p>
+
+<h2>
+<a id="lists" class="anchor" href="#lists" aria-hidden="true"><span class="octicon octicon-link"></span></a>Lists</h2>
+
+<ul>
+<li>  Candy.</li>
+<li>  Gum.</li>
+<li><p>Booze.</p></li>
+<li><p>Candy.</p></li>
+<li>  Gum.</li>
+<li><p>Booze.</p></li>
+<li><p>Candy.</p></li>
+<li>  Gum.</li>
+<li><p>Booze.</p></li>
+</ul>
+
+<ol>
+<li> Red</li>
+<li> Green</li>
+<li> Blue</li>
+</ol>
+
+<h3>
+<a id="now-a-nested-list" class="anchor" href="#now-a-nested-list" aria-hidden="true"><span class="octicon octicon-link"></span></a>Now a nested list:</h3>
+
+<ol>
+<li>
+<p>First, get these ingredients:</p>
+
+<ul>
+<li>carrots</li>
+<li>celery</li>
+<li>lentils</li>
+</ul>
+</li>
+<li><p>Boil some water.</p></li>
+<li>
+<p>Dump everything in the pot and follow
+this algorithm:</p>
+
+<pre><code>find wooden spoon
+uncover pot
+stir
+cover pot
+balance wooden spoon precariously on pot handle
+wait 10 minutes
+goto first step (or shut off burner when done)
+</code></pre>
+
+<p>Do not bump wooden spoon or it will fall.</p>
+</li>
+</ol>
+
+<p>Notice again how text always lines up on 4-space indents (including
+that last line which continues item 3 above).</p>
+
+<h2>
+<a id="code" class="anchor" href="#code" aria-hidden="true"><span class="octicon octicon-link"></span></a>Code</h2>
+
+<p>I strongly recommend against using any <code>&lt;blink&gt;</code> tags.</p>
+
+<p>I wish SmartyPants used named entities like <code>&amp;mdash;</code>
+instead of decimal-encoded entites like <code>&amp;#8212;</code>.</p>
+
+<p>If you want your page to validate under XHTML 1.0 Strict,
+you've got to put paragraph tags in your blockquotes:</p>
+
+<pre><code>&lt;blockquote&gt;
+    &lt;p&gt;For example.&lt;/p&gt;
+&lt;/blockquote&gt;
+</code></pre>
+
+<p>Note again how the actual text starts at 4 columns in (4 characters
+from the left side). Here's a code sample:</p>
+
+<pre><code># Let me re-iterate ...
+for i in 1 .. 10 { do-something(i) }
+</code></pre>
+
+<p>As you probably guessed, indented 4 spaces. By the way, instead of
+indenting the block, you can use delimited blocks, if you like:</p>
+
+<pre><code>define foobar() {
+    print "Welcome to flavor country!";
+}
+</code></pre>
+
+<p>(which makes copying &amp; pasting easier). You can optionally mark the
+delimited block for Pandoc to syntax highlight it:</p>
+
+<div class="highlight highlight-python"><pre><span class="pl-k">import</span> time
+<span class="pl-c"># Quick, count to ten!</span>
+<span class="pl-k">for</span> i <span class="pl-k">in</span> <span class="pl-c1">range</span>(<span class="pl-c1">10</span>):
+    <span class="pl-c"># (but not *too* quick)</span>
+    time.sleep(<span class="pl-c1">0.5</span>)
+    <span class="pl-k">print</span> i</pre></div>
+
+<h2>
+<a id="math" class="anchor" href="#math" aria-hidden="true"><span class="octicon octicon-link"></span></a>Math</h2>
+
+<p>Inline math equations go in like so: $\omega = d\phi / dt$. Display
+math should get its own line and be put in in double-dollarsigns:</p>
+
+<p>$$I = \int \rho R^{2} dV$$</p>
+
+<p>And note that you can backslash-escape any punctuation characters
+which you wish to be displayed literally, ex.: `foo`, *bar*, etc.</p>
+
+<h2>
+<a id="links" class="anchor" href="#links" aria-hidden="true"><span class="octicon octicon-link"></span></a>Links</h2>
+
+<p>This is an <a href="http://example.com/">example link</a>.</p>
+
+<p>This is an <a href="http://example.com/" title="With a Title">example link</a>.</p>
+
+<p>I get 10 times more traffic from <a href="http://google.com/" title="Google">Google</a> than from
+<a href="http://search.yahoo.com/" title="Yahoo Search">Yahoo</a> or <a href="http://search.msn.com/" title="MSN Search">MSN</a>.</p>
+
+<p>I start my morning with a cup of coffee and
+<a href="http://www.nytimes.com/">The New York Times</a>.</p>
+
+<h2>
+<a id="images" class="anchor" href="#images" aria-hidden="true"><span class="octicon octicon-link"></span></a>Images</h2>
+
+<p><img src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" alt="alt text" title="Octocat"></p>
+
+<p><img src="https://assets-cdn.github.com/images/modules/logos_page/Octocat.png" alt="alt text" title="Octocat"></p>
+
+<h2>
+<a id="gfm" class="anchor" href="#gfm" aria-hidden="true"><span class="octicon octicon-link"></span></a>GFM</h2>
+
+<h3>
+<a id="multiple-underscores-in-words" class="anchor" href="#multiple-underscores-in-words" aria-hidden="true"><span class="octicon octicon-link"></span></a>Multiple underscores in words</h3>
+
+<p>"Normal" Markdown transforms underscores (_) into italics, such that wow_great_stuff becomes wowgreatstuff.</p>
+
+<p>It is not reasonable to italicize just part of a word, especially when you're dealing with code and names often appear with multiple underscores. Therefore, GFM ignores underscores in words, like this:</p>
+
+<p>wow_great_stuff
+do_this_and_do_that_and_another_thing.</p>
+
+<h3>
+<a id="url-autolinking" class="anchor" href="#url-autolinking" aria-hidden="true"><span class="octicon octicon-link"></span></a>URL autolinking</h3>
+
+<p>GFM will autolink standard URLs, so if you want to link to a URL (instead of setting link text), you can simply enter the URL and it will be turned into a link to that URL.</p>
+
+<p><a href="http://example.com">http://example.com</a></p>
+
+<h3>
+<a id="strikethrough" class="anchor" href="#strikethrough" aria-hidden="true"><span class="octicon octicon-link"></span></a>Strikethrough</h3>
+
+<p>GFM adds syntax to create strikethrough text, which is missing from standard Markdown.</p>
+
+<p><del>Mistaken text.</del></p>
+
+<h3>
+<a id="fenced-code-blocks" class="anchor" href="#fenced-code-blocks" aria-hidden="true"><span class="octicon octicon-link"></span></a>Fenced code blocks</h3>
+
+<p>Standard Markdown converts text with four spaces at the beginning of each line into a code block; GFM also supports fenced blocks. Just wrap your code in ``` (as shown below) and you won't need to indent it by four spaces. Note that although fenced code blocks don't have to be preceded by a blank line—unlike indented code blocks—we recommend placing a blank line before them to make the raw Markdown easier to read.</p>
+
+<p>Here's an example:</p>
+
+<pre><code>function test() {
+  console.log("notice the blank line before this function?");
+}
+</code></pre>
+
+<h3>
+<a id="syntax-highlighting" class="anchor" href="#syntax-highlighting" aria-hidden="true"><span class="octicon octicon-link"></span></a>Syntax highlighting</h3>
+
+<p>Code blocks can be taken a step further by adding syntax highlighting. In your fenced block, add an optional language identifier and we'll run it through syntax highlighting. For example, to syntax highlight Ruby code:</p>
+
+<div class="highlight highlight-ruby"><pre><span class="pl-k">require</span> <span class="pl-s"><span class="pl-pds">'</span>redcarpet<span class="pl-pds">'</span></span>
+markdown <span class="pl-k">=</span> <span class="pl-c1">Redcarpet</span>.<span class="pl-k">new</span>(<span class="pl-s"><span class="pl-pds">"</span>Hello World!<span class="pl-pds">"</span></span>)
+puts markdown.to_html</pre></div>
+
+<p>We use Linguist to perform language detection and syntax highlighting. You can find out which keywords are valid by perusing the languages YAML file.</p>
+
+<h3>
+<a id="tables" class="anchor" href="#tables" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tables</h3>
+
+<p>You can create tables by assembling a list of words and dividing them with hyphens - (for the first row), and then separating each column with a pipe |:</p>
+
+<table>
+<thead>
+<tr>
+<th>First Header</th>
+<th>Second Header</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Content Cell</td>
+<td>Content Cell</td>
+</tr>
+<tr>
+<td>Content Cell</td>
+<td>Content Cell</td>
+</tr>
+</tbody>
+</table>
+
+<p>For aesthetic purposes, you can also add extra pipes on the ends:</p>
+
+<table>
+<thead>
+<tr>
+<th>First Header</th>
+<th>Second Header</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Content Cell</td>
+<td>Content Cell</td>
+</tr>
+<tr>
+<td>Content Cell</td>
+<td>Content Cell</td>
+</tr>
+</tbody>
+</table>
+
+<p>Note that the dashes at the top don't need to match the length of the header text exactly:</p>
+
+<table>
+<thead>
+<tr>
+<th>Name</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Help</td>
+<td>Display the help window.</td>
+</tr>
+<tr>
+<td>Close</td>
+<td>Closes a window</td>
+</tr>
+</tbody>
+</table>
+
+<p>You can also include inline Markdown such as links, bold, italics, or strikethrough:</p>
+
+<table>
+<thead>
+<tr>
+<th>Name</th>
+<th>Description</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Help</td>
+<td>
+<del>Display the</del> help window.</td>
+</tr>
+<tr>
+<td>Close</td>
+<td>
+<em>Closes</em> a window</td>
+</tr>
+</tbody>
+</table>
+
+<p>Finally, by including colons : within the header row, you can define text to be left-aligned, right-aligned, or center-aligned:</p>
+
+<table>
+<thead>
+<tr>
+<th align="left">Left-Aligned</th>
+<th align="center">Center Aligned</th>
+<th align="right">Right Aligned</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td align="left">col 3 is</td>
+<td align="center">some wordy text</td>
+<td align="right">$1600</td>
+</tr>
+<tr>
+<td align="left">col 2 is</td>
+<td align="center">centered</td>
+<td align="right">$12</td>
+</tr>
+<tr>
+<td align="left">zebra stripes</td>
+<td align="center">are neat</td>
+<td align="right">$1</td>
+</tr>
+</tbody>
+</table>
+
+<p>A colon on the left-most side indicates a left-aligned column; a colon on the right-most side indicates a right-aligned column; a colon on both sides indicates a center-aligned column.</p>
+
+<h2>
+<a id="other-elements" class="anchor" href="#other-elements" aria-hidden="true"><span class="octicon octicon-link"></span></a>Other elements</h2>
+
+<p>A horizontal rule follows.</p>
+
+<hr>
+
+<p>Here's a definition list:</p>
+
+<p>apples
+  : Good for making applesauce.
+oranges
+  : Citrus!
+tomatoes
+  : There's no "e" in tomatoe.</p>
+
+<p>Again, text is indented 4 spaces. (Put a blank line between each
+term/definition pair to spread things out more.)</p>
+
+<p>Here's a "line block":</p>
+
+<p>| Line one
+|   Line too
+| Line tree</p>
       </section>
-
-
-      <span class="banner-fix"></span>
-
-
-      <section id="main_content">
-        <h1>Hello World!</h1>
-      </section>
-
-      <footer>
-        <span class="ribbon-outer">
-          <span class="ribbon-inner">
-            <p>this project by <a href="https://github.com/smorcuend">smorcuend</a> can be found on <a href="https://github.com/smorcuend/Hello_github">GitHub</a></p>
-          </span>
-          <span class="left-tail"></span>
-          <span class="right-tail"></span>
-        </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
-        <span class="octocat"></span>
-      </footer>
-
     </div>
-
+    <footer>
+      <p>Project maintained by <a href="https://github.com/smorcuend">smorcuend</a></p>
+      <p>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></p>
+    </footer>
+    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
     
   </body>
 </html>
